--- a/index.html
+++ b/index.html
@@ -320,8 +320,11 @@ you think may be malfunctioning. </h3>
       <h3 style="text-align: left; font-weight: bold; margin-left: 1em;"> Summarise what you observed from examination of the cell samples. </h3>
       <textarea id="experiment4" placeholder="Type your response here"></textarea>
       <br>
+
+      Genetic samples were acquired and analysed at the protein-level. Access the resource here <a href="https://gtacaus.github.io/vce101-mitochondria" target="_blank">Access VCE101 Mitochondria</a>
       <h3 style="text-align: left; font-weight: bold; margin-left: 1em;"> Outline what you have observed from genetic testing of the patients. </h3>
       <textarea id="experiment4" placeholder="Patient 1: ..."></textarea>
+        
  
 <h3 style="color: #00BC74"> Conclusions: </h3>
 <h3 style="text-align: left; font-weight: bold; margin-left: 1em;">Summarise your diagnoses. </h3>
