--- a/index.html
+++ b/index.html
@@ -318,17 +318,17 @@ you think may be malfunctioning. </h3>
 
 <h2 style="color: #00BC74"> Discussion: </h2>
       <h3 style="text-align: left; font-weight: bold; margin-left: 1em;"> Summarise what you observed from examination of the cell samples. </h3>
-      <textarea id="experiment4" placeholder="Type your response here"></textarea>
+      <textarea id="experiment5" placeholder="Type your response here"></textarea>
       <br>
 
-      Genetic samples were acquired and analysed at the protein-level. Access the resource here <a href="https://gtacaus.github.io/vce101-mitochondria" target="_blank">Access VCE101 Mitochondria</a>
+      Genetic samples were acquired and analysed at the protein-level. <a href="https://gtacaus.github.io/vce101-mitochondria" target="_blank">Access the resource here</a>
       <h3 style="text-align: left; font-weight: bold; margin-left: 1em;"> Outline what you have observed from genetic testing of the patients. </h3>
-      <textarea id="experiment4" placeholder="Patient 1: ..."></textarea>
+      <textarea id="experiment6" placeholder="Patient 1: ..."></textarea>
         
  
 <h3 style="color: #00BC74"> Conclusions: </h3>
 <h3 style="text-align: left; font-weight: bold; margin-left: 1em;">Summarise your diagnoses. </h3>
-<textarea id="experiment3" placeholder="Type your conclusion(s) here"></textarea>
+<textarea id="experiment7" placeholder="Type your conclusion(s) here"></textarea>
 
     <script>
     // Protocol Modal Logic
