Add section for testing hypothesis in index.html

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Success criteria: </p>
 you think may be malfunctioning. </h3>
       <textarea id="experiment4" placeholder="Type your response here"></textarea>
       <br>
-
+      <h3 style="text-align: left; font-weight: bold; margin-left: 1em;">How you will test your hypothesis: </h3>
 <img src="exp2overview.png" alt="How you will test your hypothesis" style="max-width: 90%; height:auto">
 
 <h2 style="color: #00BC74"> Results:</h2>
