--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Success criteria: </p>
 
       <h3 style="text-align: left; font-weight: bold; margin-left: 1em;">Form a hypothesis about which organelle(s) 
 you think may be malfunctioning. </h3>
-      <textarea id="experiment4" placeholder="Type your response here"></textarea>
+      <textarea id="experiment4" placeholder="We hypothesise that ______ is malfunctioning because..."></textarea>
       <br>
 
 <img src="exp2overview.png" alt="How you will test your hypothesis" style="max-width: 90%; height:auto">
@@ -323,7 +323,7 @@ you think may be malfunctioning. </h3>
       <textarea id="experiment5" placeholder="Type your response here"></textarea>
       <br>
 
-      Genetic samples were acquired and analysed at the protein-level. Access the resource here <a href="https://gtacaus.github.io/vce101-mitochondria" target="_blank">Access VCE101 Mitochondria</a>
+      Genetic samples were acquired and analysed at the protein-level. <br> Access the resource here <a href="https://gtacaus.github.io/vce101-mitochondria" target="_blank">Access VCE101 Mitochondria</a>
       <h3 style="text-align: left; font-weight: bold; margin-left: 1em;"> Outline what you have observed from genetic testing of the patients. </h3>
       <textarea id="experiment6" placeholder="Patient 1: ..."></textarea>
         
