Update image restore buttons in index.html

--- a/index.html
+++ b/index.html
@@ -881,20 +881,20 @@ you think may be malfunctioning. </h3>
         <h2>Restore Panel</h2>
         <p>Click a button below to place example images or restore data.</p>
 
-        <button onclick="restoreImage('imageContainer1', 'secondary immune response model.jpeg')">
-          Secondary Immune Response Model
+        <button onclick="restoreImage('singleUploadImg', 'celldiagramexample.png')">
+          Cell diagram model
         </button>
-        <button onclick="restoreImage('imageContainer2', 'Albinism1.jpg')">
-          ELISA model
+        <button onclick="restoreImage('controlSlideImg', '1_paramecium_P8120005.JPG')">
+          Control slide example
         </button>
-        <button onclick="restoreImage('imageContainer3', 'Klinefelter1.jpg')">  
-          ELISA Assay
+        <button onclick="restoreImage('experimentSlideImg', '2_paramecium_yeast1vac.jpg')">  
+          Experimental slide example
         </button>
-        <button onclick="restoreImage('imageContainer4', 'Turner2.jpg')">
-          Absorbance Values
+        <button onclick="restoreImage('imageContainer4', 'A1_fluoro400x.JPG')">
+          Healthy MEF example
         </button>
-        <button onclick="restoreImage('imageContainer5', 'Albinism2.jpg')">
-          Graph of Absorbance Values
+        <button onclick="restoreImage('imageContainer5', 'fluoro stain1_gtac.jpg')">
+          Diseased MEF example
         </button>        
         <button onclick="restoreImage('imageContainer6', 'Klinefelter2.jpg')">
           Growth plates
